<resources>
    <string name="app_name">Lab10</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="altitude">Altitude</string>
    <string name="speed">Speed</string>
    <string name="temperature">Temperature</string>
    <string name="feelsLike">Feels Like</string>
    <string name="maxTemp">Maximum Temperature</string>
    <string name="minTemp">Minimum Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="windDirection">Wind Direction</string>
    <string name="sunrise">Sunrise Time</string>
    <string name="sunset">Sunset Time</string>
</resources>