<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnChangeLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change Language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="405dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChangeLanguage"
        app:layout_constraintVertical_bias="0.376">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/txtViewLongitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtViewLongitudeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/txtViewLatitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtViewLatitudeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altitude"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtViewAltitudeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/txtViewSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtViewSpeedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/viewTxtTemperature"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/temperature"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/getTemperature"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="0000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/viewTxtTemperatureFeelsLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feelsLike"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/getFeelsLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/viewTxtMaxTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maxTemp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/getMaxTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/viewTxtMinTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minTemp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/getMinTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/viewTxtHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/getHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/viewTxtVisibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visibility"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/getVisibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/viewTxtWindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/windSpeed"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/getWindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/viewTxtWindDirection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/windDirection"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/getWindDirection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/viewTxtSunriseTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunrise"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/getSunriseTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/txtViewSunsetTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunset"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/getSunsetTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0000"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>